fcc-voting-app/src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}

.show-grid {
}

.poll-info {
  padding-top: 2em;
}

.form-options {
  margin: 0 auto;
  font-size: 16px;
  width: 15em;
  height: 2em;
  text-align: center;
}

select, option {
  font-size: 13px;
  width: 10px;
}

.poll-submit {
  margin: 2px 2em 2em 2em;
  font-size: 16px;
  width: 15em;
  height: 2em;
}

